edition = "2023";

package wayplatform.connect.tachograph.v1;

import "wayplatform/connect/tachograph/card/v1/driver_card_file.proto";
import "wayplatform/connect/tachograph/vu/v1/vehicle_unit_file.proto";

// Represents the entire content of a single fully parsed tachograph data file (e.g., .DDD, .C1B, .V1B).
//
// This message contains only fully parsed, semantic data structures. For intermediate
// raw parsing suitable for signature authentication, see RawFile.
//
// This message uses a manually tagged union pattern, where the `type` field indicates
// which of the specific file-type fields is populated.
message File {
  // The type of tachograph data file contained in this message. This acts as the
  // discriminator that tells the consumer which of the payload fields is valid.
  Type type = 1;

  // The content of the file if it is from a Vehicle Unit.
  // This field is populated if and only if `type` is `VEHICLE_UNIT`.
  wayplatform.connect.tachograph.vu.v1.VehicleUnitFile vehicle_unit = 2;

  // The content of the file if it is from a Driver Card.
  // This field is populated if and only if `type` is `DRIVER_CARD`.
  wayplatform.connect.tachograph.card.v1.DriverCardFile driver_card = 3;

  // The content of the file if it is from a Workshop Card.
  // This field is populated if and only if `type` is `WORKSHOP_CARD`.
  // wayplatform.connect.tachograph.card.v1.WorkshopCardFile workshop_card = 4;

  // The content of the file if it is from a Control Card.
  // This field is populated if and only if `type` is `CONTROL_CARD`.
  // wayplatform.connect.tachograph.card.v1.ControlCardFile control_card = 5;

  // The content of the file if it is from a Company Card.
  // This field is populated if and only if `type` is `COMPANY_CARD`.
  // wayplatform.connect.tachograph.card.v1.CompanyCardFile company_card = 6;

  // Defines the possible types of a tachograph data file.
  enum Type {
    // The file type is unknown or not specified.
    TYPE_UNSPECIFIED = 0;

    // A file downloaded from a Vehicle Unit (VU).
    VEHICLE_UNIT = 1;

    // A file downloaded from a Driver Card.
    DRIVER_CARD = 2;

    // A file downloaded from a Workshop Card.
    WORKSHOP_CARD = 3;

    // A file downloaded from a Control Card.
    CONTROL_CARD = 4;

    // A file downloaded from a Company Card.
    COMPANY_CARD = 5;
  }
}
